--- a/com/company/dystry.fxml
+++ b/com/company/dystry.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.company.Controller">
    <children>
       <Label layoutX="14.0" prefHeight="70.0" prefWidth="130.0" style="-fx-text-fill: #ffffff;" text="Nazwa:">
          <font>
@@ -22,5 +22,20 @@
             <Font name="Zapfino" size="24.0" />
          </font>
       </Label>
+      <Text layoutX="335.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%abonament">
+         <font>
+            <Font name="Zapfino" size="24.0" />
+         </font>
+      </Text>
+      <Text layoutX="335.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%stanKonta">
+         <font>
+            <Font name="Zapfino" size="24.0" />
+         </font>
+      </Text>
+      <Text layoutX="342.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%nazwa">
+         <font>
+            <Font name="Zapfino" size="24.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
