--- a/com/company/live.fxml
+++ b/com/company/live.fxml
@@ -5,8 +5,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.company.Controller">
    <children>
       <ImageView fitHeight="359.0" fitWidth="228.0" layoutX="349.0" layoutY="22.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -33,5 +34,25 @@
             <Font name="Zapfino" size="13.0" />
          </font>
       </Label>
+      <Text layoutX="158.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%dystrybutor">
+         <font>
+            <Font name="Zapfino" size="13.0" />
+         </font>
+      </Text>
+      <Text layoutX="158.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%data">
+         <font>
+            <Font name="Zapfino" size="13.0" />
+         </font>
+      </Text>
+      <Text layoutX="158.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%nazwa">
+         <font>
+            <Font name="Zapfino" size="13.0" />
+         </font>
+      </Text>
+      <Text layoutX="168.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%cena">
+         <font>
+            <Font name="Zapfino" size="13.0" />
+         </font>
+      </Text>
    </children>
-</AnchorPane>
+</fx:root>
