--- a/com/company/gui1.fxml
+++ b/com/company/gui1.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <VBox prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.company.Controller">
   <children>
@@ -76,6 +77,21 @@
                         <Font name="Zapfino" size="20.0" />
                      </font>
                   </Label>
+                  <Text layoutX="106.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%tydzien">
+                     <font>
+                        <Font name="Zapfino" size="18.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="93.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%stanKonta">
+                     <font>
+                        <Font name="Zapfino" size="18.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="68.0" layoutY="532.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%niebezpieczenstwo">
+                     <font>
+                        <Font name="Zapfino" size="18.0" />
+                     </font>
+                  </Text>
                </children>
         </AnchorPane>
       </items>
