--- a/com/company/gui1.fxml
+++ b/com/company/gui1.fxml
@@ -16,7 +16,7 @@
       <items>
         <AnchorPane prefHeight="584.0" prefWidth="185.0" style="-fx-background-color: #000000;">
           <children>
-                  <Button layoutX="24.0" layoutY="70.0" mnemonicParsing="false" onAction="#tydzien" prefHeight="32.0" prefWidth="129.0" rotate="-23.6" style="-fx-background-color: #800080#800080; -fx-font: Zapfino;" text="Następny tydzień">
+                  <Button layoutX="24.0" layoutY="70.0" mnemonicParsing="false" onAction="#tydzienn" prefHeight="32.0" prefWidth="129.0" rotate="-23.6" style="-fx-background-color: #800080#800080; -fx-font: Zapfino;" text="Następny tydzień">
                      <font>
                         <Font name="Zapfino" size="14.0" />
                      </font>
@@ -32,7 +32,7 @@
                         <Reflection bottomOpacity="0.15" topOpacity="0.71" />
                      </effect>
                   </Button>
-                  <Button layoutX="24.0" layoutY="202.0" mnemonicParsing="false" onAction="#zapis" prefHeight="32.0" prefWidth="129.0" rotate="20.0" style="-fx-background-color: #800080#800080;" text="Zapisz">
+                  <Button layoutX="24.0" layoutY="202.0" mnemonicParsing="false" onAction="#zapisz" prefHeight="32.0" prefWidth="129.0" rotate="20.0" style="-fx-background-color: #800080#800080;" text="Zapisz">
                      <effect>
                         <Reflection bottomOpacity="0.15" topOpacity="0.7" />
                      </effect>
@@ -60,7 +60,7 @@
                   <Label layoutX="223.0" layoutY="292.0" prefHeight="23.0" prefWidth="174.0" style="-fx-background-color: #800080; -fx-text-fill: #ffffff;" text="Nasi użytkownicy" />
         </children>
       </AnchorPane>
-        <AnchorPane style="-fx-background-color: #000000;">
+        <AnchorPane fx:id="stanKont" style="-fx-background-color: #000000;">
                <children>
                   <Label layoutX="80.0" layoutY="39.0" style="-fx-text-fill: #ffffff;" text="Obecny tydzień">
                      <font>
@@ -77,17 +77,17 @@
                         <Font name="Zapfino" size="20.0" />
                      </font>
                   </Label>
-                  <Text layoutX="106.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%tydzien">
+                  <Text fx:id="tydzien" layoutX="106.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%tydzien">
                      <font>
                         <Font name="Zapfino" size="18.0" />
                      </font>
                   </Text>
-                  <Text layoutX="93.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%stanKonta">
+                  <Text fx:id="stanKonta" layoutX="93.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%stanKonta">
                      <font>
                         <Font name="Zapfino" size="18.0" />
                      </font>
                   </Text>
-                  <Text layoutX="68.0" layoutY="532.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%niebezpieczenstwo">
+                  <Text fx:id="niebezpieczenstwo" layoutX="68.0" layoutY="532.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #ffffff;" text="%niebezpieczenstwo">
                      <font>
                         <Font name="Zapfino" size="18.0" />
                      </font>
